--- a/styles/body/_header.scss
+++ b/styles/body/_header.scss
@@ -34,6 +34,7 @@
 
 .header-nav-item a, button a{
     text-decoration: none;
+    line-height: 17.64px;
 }
 
 .header-nav-item a {
@@ -45,7 +46,7 @@
 }
 
 .header-nav-button {
-    border: 2px solid #0CBBC7;
+    border: 1px solid #0CBBC7;
     background-color: transparent;
     width: 138px;
     height: 38px;
