--- a/styles/main.css
+++ b/styles/main.css
@@ -4,12 +4,44 @@ body {
   margin: 0px;
 }
 
+button {
+  display: inline-block;
+}
+
 button a {
   font-weight: 700;
 }
 
+h2 {
+  margin: 0px;
+  padding: 0px;
+}
+
 .div {
   display: block;
+}
+
+.text-description {
+  font-size: 16px;
+  font-weight: 400;
+  color: #676767;
+}
+
+.text-description-smaller {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.blue-button {
+  background-color: #0CBBC7;
+  color: #FFFFFF;
+}
+
+.blue-button:hover {
+  background-color: #FFFFFF;
+  color: #0CBBC7;
+  border: 1px solid #0CBBC7;
+  transition-duration: 10ms;
 }
 
 .header {
@@ -20,6 +52,7 @@ button a {
   font-weight: 400;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
   font-size: 14px;
 }
 
@@ -35,8 +68,10 @@ button a {
   width: 92.65px;
   height: 25px;
   display: block;
-  margin-top: auto;
-  margin-bottom: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
 }
 
 .header-nav-item {
@@ -65,4 +100,66 @@ button a {
   height: 38px;
   margin-top: auto;
   margin-bottom: auto;
+  padding: 0;
+}
+
+.hero-section .container {
+  position: relative;
+}
+
+.hero-background {
+  z-index: -1;
+  width: 100%;
+  height: 550px;
+  background-color: #EDFEFF;
+  background-image: url("../../assets/Images/hero-background.png");
+  position: absolute;
+}
+
+.hero-title {
+  display: block;
+  font-size: 44px;
+  font-weight: 700;
+  margin: 0 auto;
+  text-align: center;
+  width: 779px;
+  padding-top: 50px;
+  line-height: 55.44px;
+}
+
+.container .text-description-smaller {
+  display: block;
+  color: #878787;
+  text-align: center;
+  width: 447px;
+  line-height: 22px;
+  margin: 0 auto;
+  padding-top: 20px;
+}
+
+.hero-button {
+  width: 188px;
+  height: 48px;
+  border: 0;
+  list-height: 20.16px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 30px;
+  padding: 0;
+}
+
+.button-arrow {
+  width: 11px;
+  height: 18px;
+  margin-left: 10px;
+  transform: translateY(15%);
+}
+
+.hero-image {
+  display: block;
+  width: 964px;
+  height: 361px;
+  margin: 0 auto;
+  padding-top: 134px;
 }/*# sourceMappingURL=main.css.map */
