--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,13 @@ body {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-style: normal;
   margin: 0px;
+  background-color: #ffffff;
+}
+
+ul {
+  list-style-type: none;
+  padding-inline-start: 0;
+  display: inline-block;
 }
 
 button {
@@ -17,6 +24,20 @@ h2 {
   padding: 0px;
 }
 
+p {
+  margin: 0;
+}
+
+li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.side-lower-title {
+  display: flex;
+}
+
 .div {
   display: block;
 }
@@ -24,6 +45,7 @@ h2 {
 .text-description {
   font-size: 16px;
   font-weight: 400;
+  line-height: 26px;
   color: #676767;
 }
 
@@ -42,6 +64,36 @@ h2 {
   color: #0CBBC7;
   border: 1px solid #0CBBC7;
   transition-duration: 10ms;
+}
+
+.section-title {
+  text-align: center;
+}
+
+.section-title p {
+  display: inline-block;
+  font-size: 8px;
+  font-weight: 700;
+  color: #0CBBC7;
+  background-color: #EFFEFF;
+  margin: 0;
+  padding: 6px 10px;
+  vertical-align: bottom;
+}
+
+.lower-title {
+  font-size: 28px;
+  font-weight: 400;
+  text-align: center;
+  margin: 0;
+  padding-top: 10px;
+}
+
+.start-button {
+  border: transparent;
+  padding: 14px 20px;
+  font-size: 16px;
+  font-weight: 700;
 }
 
 .header {
@@ -141,7 +193,6 @@ h2 {
   width: 188px;
   height: 48px;
   border: 0;
-  list-height: 20.16px;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -162,4 +213,259 @@ h2 {
   height: 361px;
   margin: 0 auto;
   padding-top: 134px;
+}
+
+.customers-section {
+  padding-top: 86px;
+}
+
+.customers-section .container {
+  height: 219px;
+  position: relative;
+}
+
+.customers-logo-row {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
+  padding-top: 30px;
+  display: flex;
+  gap: 50px;
+}
+
+.customers-logo {
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.customers-stats {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+  display: flex;
+  gap: 35px;
+}
+
+.customers-checkmark {
+  width: 9.95px;
+  height: 8px;
+}
+
+.customers-stats-description {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.customers-stats-description b {
+  color: #0CBBC7;
+  font-weight: 700;
+}
+
+.promises-section {
+  padding-top: 148px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.promises-section .container {
+  width: 944px;
+  height: 480px;
+  position: relative;
+}
+
+.promises-section .side-textbox {
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 86px;
+  width: 365px;
+}
+
+.promises-img {
+  position: absolute;
+  right: 0;
+}
+
+.side-textbox .section-title {
+  width: 85px;
+}
+
+.promises-section .text-description {
+  padding-top: 20px;
+}
+
+.promises-section .start-button {
+  margin-top: 50px;
+}
+
+.awards-section {
+  padding-top: 200px;
+}
+
+.awards-section .container {
+  margin: auto;
+  width: 903px;
+}
+
+.awards-cards-block {
+  padding-top: 61px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 60px;
+  row-gap: 50px;
+}
+
+.award-card {
+  width: 100%;
+  height: 259px;
+  position: relative;
+}
+
+.award-card-img {
+  position: absolute;
+  left: 50%;
+  top: 50px;
+  transform: translateX(-50%);
+}
+
+.award-card-text {
+  position: relative;
+  width: 171px;
+  line-height: 26px;
+  left: 50%;
+  top: 160px;
+  transform: translateX(-50%);
+  text-align: center;
+  font-weight: 700;
+}
+
+/* Background colors for .award-card elements */
+.award-card.a1 {
+  background-color: #FFF5F3;
+}
+
+.award-card.a2 {
+  background-color: #FFF0F9;
+}
+
+.award-card.a3 {
+  background-color: #ECFFFF;
+}
+
+.award-card.a4 {
+  background-color: #F6F4FF;
+}
+
+.award-card.a5 {
+  background-color: #FFF9E7;
+}
+
+.award-card.a6 {
+  background-color: #FFEDE4;
+}
+
+.BfP-section {
+  padding-top: 200px;
+}
+
+.BfP-slider {
+  margin: 0;
+  padding-top: 50px;
+  display: flex;
+  width: 944px;
+  justify-content: space-between;
+  margin: auto;
+}
+
+.BfP-slider-button {
+  width: 236px;
+  text-align: center;
+  position: relative;
+  font-size: 16px;
+  font-weight: 400;
+  color: #676767;
+  text-decoration: none;
+  justify-content: center;
+}
+
+.BfP-slider-button svg {
+  fill: currentColor;
+}
+
+.BfP-slider-button:hover {
+  font-weight: 600;
+  color: #0CBBC7;
+}
+
+.BfP-slider-button:hover svg {
+  fill: #0CBBC7;
+}
+
+.BfP-slider-button:after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: -22px;
+  content: "";
+  display: block;
+  height: 3px;
+  position: absolute;
+  background: #0CBBC7;
+  transition: width 0.2s ease 0s, left 0.2s ease 0s;
+  width: 0;
+}
+
+.BfP-slider-button:hover:after {
+  width: 100%;
+  left: 0;
+}
+
+.BfP-display-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  background-color: #EDFEFF;
+  height: 411px;
+  justify-content: center;
+  gap: 20px;
+}
+
+.BfP-display-block {
+  width: 462px;
+}
+
+.BfP-display-block .text-description {
+  width: 359px;
+  line-height: 26px;
+}
+
+.BfP-display-block-title {
+  padding-top: 50px;
+  font-size: 28px;
+  font-weight: 600;
+}
+
+.BfP-display-block-subtitle {
+  padding-top: 20px;
+  font-family: Plus Jakarta Sans;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.BfP-section .text-description {
+  padding-top: 10px;
+  line-height: 26px;
+  text-align: left;
+}
+
+.BfP-section .start-button {
+  margin-top: 30px;
+}
+
+.BfP-display-block img {
+  padding-top: 62px;
 }/*# sourceMappingURL=main.css.map */
