--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,7 +2,14 @@ body {
     font-family: "Plus Jakarta Sans", sans-serif;
     font-style: normal;
     margin: 0px;
-  }
+    background-color: #ffffff; //temporeral
+}
+
+ul {
+    list-style-type: none;
+    padding-inline-start: 0;
+    display: inline-block;
+}
 
 button {
     display: inline-block;
@@ -17,6 +24,20 @@ h2 {
     padding: 0px;
 }
 
+p {
+    margin: 0;
+}
+
+li {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.side-lower-title {
+    display: flex;
+}
+
 .div {
     display: block;
 }
@@ -24,6 +45,7 @@ h2 {
 .text-description {
     font-size: 16px;
     font-weight: 400;
+    line-height: 26px;
     color: #676767;
 }
 
@@ -45,7 +67,36 @@ h2 {
     transition-duration: 10ms;
 }
 
+.section-title {
+    text-align: center;
+}
 
+.section-title p{
+    display: inline-block;
+    font-size: 8px;
+    font-weight: 700;
+    color: #0CBBC7;
+    background-color: #EFFEFF;
+    margin: 0;
+    padding: 6px 10px;
+    vertical-align: bottom;
+    
+}
+
+.lower-title {
+    font-size: 28px;
+    font-weight: 400;
+    text-align: center;
+    margin: 0;
+    padding-top: 10px;
+}
+
+.start-button {
+    border: transparent;
+    padding: 14px 20px;
+    font-size: 16px;
+    font-weight: 700;
+}
 
 @import "./body/header";
 @import "./body/footer";
