Finished for 1440px width screen
Adaptive WIP

--- a/styles/body/_hero-section.scss
+++ b/styles/body/_hero-section.scss
@@ -23,12 +23,9 @@
     line-height: 55.44px;
 }
 
-.container .text-description-smaller {
-    display: block;
-    color: #878787;
+.hero-section .text-description-smaller {
     text-align: center;
     width: 447px;
-    line-height: 22px;
     margin: 0 auto;
     padding-top: 20px;
 }
@@ -48,7 +45,7 @@
   width: 11px;
   height: 18px;
   margin-left: 10px;
-  transform: translateY(15%);
+  transform: translateY(35%);
 }
 
 .hero-image{
