--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,7 +2,6 @@ body {
     font-family: "Plus Jakarta Sans", sans-serif;
     font-style: normal;
     margin: 0px;
-    background-color: #ffffff; //temporeral
 }
 
 ul {
@@ -13,15 +12,17 @@ ul {
 
 button {
     display: inline-block;
-}
-
-button a{
+    border: transparent;
     font-weight: 700;
 }
 
 h2 {
     margin: 0px;
     padding: 0px;
+}
+
+a {
+    text-decoration: none;
 }
 
 p {
@@ -52,7 +53,10 @@ li {
 .text-description-smaller {
     font-size: 14px;
     font-weight: 400;
+    color: #878787;
+    line-height: 22px;
 }
+
 
 .blue-button{
     background-color: #0CBBC7;
@@ -60,10 +64,23 @@ li {
 }
 
 
-.blue-button:hover {
+.blue-button:hover{
     background-color: #FFFFFF;
     color: #0CBBC7;
     border: 1px solid #0CBBC7;
+    transition-duration: 10ms;
+}
+
+.white-button{
+    background-color: #FFFFFF;
+    color: #0CBBC7;
+    border: 1px solid #0CBBC7;
+}
+
+.white-button:hover{
+    background-color: #0CBBC7;
+    color: #FFFFFF;
+    border: transparent;
     transition-duration: 10ms;
 }
 
@@ -92,10 +109,13 @@ li {
 }
 
 .start-button {
-    border: transparent;
     padding: 14px 20px;
     font-size: 16px;
-    font-weight: 700;
+}
+
+.smaller-button {
+    padding: 10px 20px;
+    font-size: 14px;
 }
 
 @import "./body/header";
