Recources card buttons hotfix

--- a/styles/body/_testemonials-section.scss
+++ b/styles/body/_testemonials-section.scss
@@ -26,6 +26,10 @@
     height: 400px;
     left: 50%;
     transform: translateX(-50%);
+    
+    img{
+        border-radius: 4px 0px 0px 0px;
+    }
 }
 
 .testemonials-playbutton{
