--- a/styles/body/_resources-section.scss
+++ b/styles/body/_resources-section.scss
@@ -20,6 +20,7 @@
     height: 533px;
     border-radius: 4px 0px 0px 0px;
     background-color: #FFFFFF;
+    position: relative;
 
     .resources-card-img{
         padding-left: 35px;
@@ -42,7 +43,9 @@
 
     .smaller-button{
         margin-left: 35px;
-        margin-top: 25px;
+        position: absolute;
+        bottom: 0;
+        margin-bottom: 40px;
     }
 
     box-shadow: 0px 7px 10px 0px #00000008;
