--- a/styles/main.css
+++ b/styles/main.css
@@ -606,6 +606,9 @@ li {
   left: 50%;
   transform: translateX(-50%);
 }
+.testemonials-video img {
+  border-radius: 4px 0px 0px 0px;
+}
 
 .testemonials-playbutton {
   width: 70px;
@@ -716,6 +719,7 @@ li {
   height: 533px;
   border-radius: 4px 0px 0px 0px;
   background-color: #FFFFFF;
+  position: relative;
   box-shadow: 0px 7px 10px 0px rgba(0, 0, 0, 0.031372549);
 }
 .resources-card .resources-card-img {
@@ -736,7 +740,9 @@ li {
 }
 .resources-card .smaller-button {
   margin-left: 35px;
-  margin-top: 25px;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 40px;
 }
 
 .resources-background {
