--- a/styles/body/_customers-section.scss
+++ b/styles/body/_customers-section.scss
@@ -4,13 +4,13 @@
 
 .customers-section .container{
     height: 219px;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .customers-logo-row{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
     margin: 0;
     padding-top: 30px;
     display: flex;
@@ -25,10 +25,7 @@
 }
 
 .customers-stats{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 0;
+    padding-top: 30px;
     display: flex;
     gap: 35px;
 }
