--- a/styles/body/_resources-section.scss
+++ b/styles/body/_resources-section.scss
@@ -9,7 +9,7 @@
 
 .resources-cards{
     padding-top: 50px;
-    width: 1140px;
+    max-width: 1140px;
     margin: auto;
     display: flex;
     justify-content: space-between;
