--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@ body {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-style: normal;
   margin: 0px;
+  background-color: red;
 }
 
 ul {
@@ -329,13 +330,13 @@ li {
 
 .customers-section .container {
   height: 219px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .customers-logo-row {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
   margin: 0;
   padding-top: 30px;
   display: flex;
@@ -350,10 +351,7 @@ li {
 }
 
 .customers-stats {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 0;
+  padding-top: 30px;
   display: flex;
   gap: 35px;
 }
@@ -708,7 +706,7 @@ li {
 
 .resources-cards {
   padding-top: 50px;
-  width: 1140px;
+  max-width: 1140px;
   margin: auto;
   display: flex;
   justify-content: space-between;
@@ -756,4 +754,59 @@ li {
 
 .resources-card:hover {
   box-shadow: 0px 7px 10px 0px rgba(0, 0, 0, 0.2078431373);
+}
+
+@media (max-width: 1140px) {
+  .customers-logo-row {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 10px;
+  }
+  .customers-logo {
+    width: 167px;
+  }
+  .resources-section .container {
+    height: 100%;
+  }
+  .resources-cards {
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    flex-wrap: wrap;
+    gap: 31px 31px;
+    padding-bottom: 31px;
+  }
+  .resources-background {
+    height: 890px;
+  }
+}
+@media (max-width: 944px) {
+  header nav {
+    display: none;
+  }
+  .hero-title {
+    width: 80%;
+  }
+  .hero-image {
+    width: 100%;
+    height: 100%;
+  }
+  .promises-section .container {
+    width: 100%;
+  }
+  .awards-cards-block {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .awards-section .container {
+    width: 90%;
+  }
+  .BfP-slider {
+    width: 100%;
+  }
+  .solution-section .container {
+    width: 100%;
+  }
+  .solution-img {
+    display: none;
+  }
 }/*# sourceMappingURL=main.css.map */
