--- a/styles/_adaptive-main.scss
+++ b/styles/_adaptive-main.scss
@@ -1,6 +1,8 @@
 @media (max-width: 1140px) {
 
-    
+    .container {
+        height: 100% !important;
+    }
     
     .customers-logo-row{
         flex-wrap: wrap;
@@ -33,17 +35,26 @@
 
 @media (max-width: 944px){
 
-    header nav{
-        display: none;
+    header{
+        height: 40px !important;
+
+        nav{
+            display: none;
+        }
     }
 
     .hero-title{
         width: 80%;
     }
 
+    .hero-button{
+        margin-top: 15px;
+    }
+
     .hero-image{
         width: 100%;
         height: 100%;
+        padding-top: 100px;
     }
 
     .promises-section .container{
@@ -52,21 +63,64 @@
 
     .awards-cards-block{
         grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        justify-content: center;
     }
+    
 
     .awards-section .container{
         width: 90%;
+        justify-content: center;
+        align-items: center;
     }
 
     .BfP-slider{
         width: 100%;
     }
 
+    .BfP-display-block{
+        width: 90%;
+    }
+    
+    .BfP-display-block:nth-child(2) {
+        display: none;
+    }
+
     .solution-section .container{
-        width: 100%;
+        width: 90%;
     }
 
     .solution-img{
+        padding-right: 0 !important;
+    }
+}
+
+@media (max-width:860px){
+    .solution-img{
         display: none;
+    }
+
+    .customers-stats{
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 600px){
+
+    .hero-section{
+        .hero-title{
+            font-size: 32px;
+            line-height: 34px;
+        }
+
+        .text-description-smaller{
+            width: 90%;
+        }
+    } 
+
+    .awards-cards-block{
+        grid-template-columns: repeat(1, 1fr);
     }
 }
