--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,6 @@ body {
   font-family: "Plus Jakarta Sans", sans-serif;
   font-style: normal;
   margin: 0px;
-  background-color: red;
 }
 
 ul {
@@ -380,7 +379,7 @@ li {
 
 .promises-section .container {
   width: 944px;
-  height: 480px;
+  height: 480px !important;
   position: relative;
 }
 
@@ -416,18 +415,20 @@ li {
 .awards-section .container {
   margin: auto;
   width: 903px;
+  display: flex;
+  flex-direction: column;
 }
 
 .awards-cards-block {
   padding-top: 61px;
-  display: grid;
+  display: inline-grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 60px;
   row-gap: 50px;
 }
 
 .award-card {
-  width: 100%;
+  width: 261px;
   height: 259px;
   position: relative;
 }
@@ -532,7 +533,6 @@ li {
 .BfP-display-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   margin-top: 20px;
   background-color: #EDFEFF;
   height: 411px;
@@ -588,7 +588,7 @@ li {
 
 .testemonials-section .container {
   width: 944px;
-  height: 400px;
+  height: 400px !important;
   position: relative;
 }
 
@@ -757,6 +757,9 @@ li {
 }
 
 @media (max-width: 1140px) {
+  .container {
+    height: 100% !important;
+  }
   .customers-logo-row {
     flex-wrap: wrap;
     justify-content: center;
@@ -781,32 +784,71 @@ li {
   }
 }
 @media (max-width: 944px) {
+  header {
+    height: 40px !important;
+  }
   header nav {
     display: none;
   }
   .hero-title {
     width: 80%;
   }
+  .hero-button {
+    margin-top: 15px;
+  }
   .hero-image {
     width: 100%;
     height: 100%;
+    padding-top: 100px;
   }
   .promises-section .container {
     width: 100%;
   }
   .awards-cards-block {
     grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-content: center;
   }
   .awards-section .container {
     width: 90%;
+    justify-content: center;
+    align-items: center;
   }
   .BfP-slider {
     width: 100%;
   }
+  .BfP-display-block {
+    width: 90%;
+  }
+  .BfP-display-block:nth-child(2) {
+    display: none;
+  }
   .solution-section .container {
-    width: 100%;
+    width: 90%;
   }
   .solution-img {
+    padding-right: 0 !important;
+  }
+}
+@media (max-width: 860px) {
+  .solution-img {
     display: none;
+  }
+  .customers-stats {
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media (max-width: 600px) {
+  .hero-section .hero-title {
+    font-size: 32px;
+    line-height: 34px;
+  }
+  .hero-section .text-description-smaller {
+    width: 90%;
+  }
+  .awards-cards-block {
+    grid-template-columns: repeat(1, 1fr);
   }
 }/*# sourceMappingURL=main.css.map */
