Almost done adaptive
Adjusted every section that needed to be fixed in lower screen width. Support up to 380px screen width

--- a/styles/body/_footer.scss
+++ b/styles/body/_footer.scss
@@ -41,6 +41,7 @@
     top: 0;
     right: 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     width: 478px;
     padding-top: 50px;
