--- a/styles/body/_testemonials-section.scss
+++ b/styles/body/_testemonials-section.scss
@@ -11,7 +11,7 @@
 
 .testemonials-section .container{
     width: 944px;
-    height: 400px !important;
+    min-height: 400px !important;
     position: relative;
 }
 
