--- a/styles/_adaptive-main.scss
+++ b/styles/_adaptive-main.scss
@@ -33,6 +33,22 @@
     }
 }
 
+@media (max-width: 1000px){
+    .SanFrancisco{
+        display: none;
+    }
+
+    .footer-columns{
+        padding-right: 0;
+        margin: 10px;
+        transform: translateX(-50%);
+        left: 50%;
+        width: 80%;
+        height: auto;
+        gap: 20px;
+    }
+}
+
 @media (max-width: 944px){
 
     header{
@@ -59,6 +75,9 @@
 
     .promises-section .container{
         width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .awards-cards-block{
@@ -80,10 +99,7 @@
 
     .BfP-display-block{
         width: 90%;
-    }
-    
-    .BfP-display-block:nth-child(2) {
-        display: none;
+        height: 90%;
     }
 
     .solution-section .container{
@@ -100,10 +116,80 @@
         display: none;
     }
 
+    .solution-section{
+        padding-top: 250px;
+
+        .container{
+            justify-content: center;
+        }
+    }
     .customers-stats{
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+    }
+
+    .BfP-display-block{
+        max-width: 400px;
+    }
+
+    .BfP-display-block:nth-child(2) {
+        display: none;
+    }
+
+    .footer-basement{
+        gap:40px;
+
+        .footer-basement-socials{
+            padding-top: 20px;
+        }
+
+        .footer-basement-text{
+            padding-top: 60px;
+        }
+    }
+}
+
+@media (max-width: 800px){
+    .promises-img{
+        display: none;
+    }
+    .promises-section .container{
+
+        height: 320px !important;
+        .side-textbox{
+            top: 0;
+            position: relative;
+            min-width: 50%;
+        }
+    }
+
+    .testemonials-section .side-textbox{
+        padding-top: 0;
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .lower-title{
+            width: 100%;
+            text-align: center;
+        }
+
+        .smaller-button{
+            margin: 20px 0;
+        }
+    }
+    
+
+    .testemonials-description-block{
+        bottom: -270px;
+    }
+
+    .resources-section{
+        padding-top: 150px;
     }
 }
 
@@ -118,9 +204,19 @@
         .text-description-smaller{
             width: 90%;
         }
-    } 
+    }
 
     .awards-cards-block{
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .BfP-slider-button{
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 398px) {
+    .footer-menu{
+        height: 620px;
     }
 }
