--- a/styles/main.css
+++ b/styles/main.css
@@ -212,6 +212,7 @@ li {
   top: 0;
   right: 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 478px;
   padding-top: 50px;
@@ -588,7 +589,7 @@ li {
 
 .testemonials-section .container {
   width: 944px;
-  height: 400px !important;
+  min-height: 400px !important;
   position: relative;
 }
 
@@ -783,6 +784,20 @@ li {
     height: 890px;
   }
 }
+@media (max-width: 1000px) {
+  .SanFrancisco {
+    display: none;
+  }
+  .footer-columns {
+    padding-right: 0;
+    margin: 10px;
+    transform: translateX(-50%);
+    left: 50%;
+    width: 80%;
+    height: auto;
+    gap: 20px;
+  }
+}
 @media (max-width: 944px) {
   header {
     height: 40px !important;
@@ -803,6 +818,9 @@ li {
   }
   .promises-section .container {
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .awards-cards-block {
     grid-template-columns: repeat(2, 1fr);
@@ -819,9 +837,7 @@ li {
   }
   .BfP-display-block {
     width: 90%;
-  }
-  .BfP-display-block:nth-child(2) {
-    display: none;
+    height: 90%;
   }
   .solution-section .container {
     width: 90%;
@@ -834,10 +850,66 @@ li {
   .solution-img {
     display: none;
   }
+  .solution-section {
+    padding-top: 250px;
+  }
+  .solution-section .container {
+    justify-content: center;
+  }
   .customers-stats {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+  }
+  .BfP-display-block {
+    max-width: 400px;
+  }
+  .BfP-display-block:nth-child(2) {
+    display: none;
+  }
+  .footer-basement {
+    gap: 40px;
+  }
+  .footer-basement .footer-basement-socials {
+    padding-top: 20px;
+  }
+  .footer-basement .footer-basement-text {
+    padding-top: 60px;
+  }
+}
+@media (max-width: 800px) {
+  .promises-img {
+    display: none;
+  }
+  .promises-section .container {
+    height: 320px !important;
+  }
+  .promises-section .container .side-textbox {
+    top: 0;
+    position: relative;
+    min-width: 50%;
+  }
+  .testemonials-section .side-textbox {
+    padding-top: 0;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .testemonials-section .side-textbox .lower-title {
+    width: 100%;
+    text-align: center;
+  }
+  .testemonials-section .side-textbox .smaller-button {
+    margin: 20px 0;
+  }
+  .testemonials-description-block {
+    bottom: -270px;
+  }
+  .resources-section {
+    padding-top: 150px;
   }
 }
 @media (max-width: 600px) {
@@ -850,5 +922,13 @@ li {
   }
   .awards-cards-block {
     grid-template-columns: repeat(1, 1fr);
+  }
+  .BfP-slider-button {
+    font-size: 14px;
+  }
+}
+@media (max-width: 398px) {
+  .footer-menu {
+    height: 620px;
   }
 }/*# sourceMappingURL=main.css.map */
