--- a/styles/_adaptive-main.scss
+++ b/styles/_adaptive-main.scss
@@ -57,6 +57,14 @@
         nav{
             display: none;
         }
+
+        .burger-menu{
+            display: block;
+            position: absolute;
+            right: 10px;
+            width: 40px;
+            height: 40px;
+        }
     }
 
     .hero-title{
